fix spacing and text styling on join page

--- a/css/styles.css
+++ b/css/styles.css
@@ -43,10 +43,19 @@
 	margin-top: 1%;
 }
 
+.ask-col {
+	display: flex;
+}
+
 .ask-img {
 	display: flex;
 	width: 80%;
 	margin: 10%;
+}
+
+.ask-pro-img {
+	width: 29%;
+	height: 16%;
 }
 
 .bill-me {
@@ -397,6 +406,11 @@
  	background-color: rgba(255,139,4, 0.7);
  	margin-right: 25%;
  	margin-left: 25%; 
+ }
+
+ .join-main {
+ 	margin-left: 10%;
+ 	margin-right: 10%;
  }
 
  .join-pros {
